--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.19",
+    "chart.js": "^4.5.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
